trunk/Archive2/c7/e3311093af584b/output
+ g++-4.8 -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:13:14: error: ‘void stuff::derived::bar()’ marked override, but does not override
         void bar() override {
              ^
main.cpp: In function ‘int main()’:
main.cpp:21:7: error: ‘struct stuff::derived’ has no member named ‘me’
     d.me();
       ^
